# riszotto

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: pages.yaml  publish.yaml  pytest.yaml
docs/plans/: 2026-03-03-pagination-design.md  2026-03-03-pagination-implementation.md  2026-03-03-riszotto-design.md  2026-03-03-riszotto-implementation.md  2026-03-05-llamaindex-rag-design.md  2026-03-05-new-commands-design.md  2026-03-05-new-commands-implementation.md  2026-03-05-search-improvements-design.md  2026-03-05-search-improvements-implementation.md  2026-03-05-semantic-search-design.md  2026-03-05-semantic-search-implementation.md
docs/site/: index.html
docs/superpowers/plans/: 2026-03-19-semantic-search-frontend.md  2026-03-26-docling-pdf-backend.md  2026-03-26-docling-perf-bugfix.md  2026-03-26-table-output.md  2026-04-02-test-suite-redesign.md
docs/superpowers/specs/: 2026-03-18-zotero-groups-design.md  2026-03-19-search-improvements-design.md  2026-03-19-semantic-search-frontend-design.md  2026-03-25-table-output-design.md  2026-03-26-docling-pdf-backend-design.md  2026-03-26-docling-perf-and-bugfix-design.md  2026-04-02-test-suite-redesign.md
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  theme.ts  types.ts
frontend/src/components/: DetailPanel.tsx  GraphControls.tsx  GraphView.tsx  PaperNode.tsx  SearchBar.tsx  TopBar.tsx
skills/using-riszotto/: SKILL.md
src/riszotto/: __init__.py  cli.py  client.py  config.py  formatting.py  paths.py  semantic.py
src/riszotto/api/: __init__.py  routes.py
src/riszotto/converter/: __init__.py  base.py  cache.py  docling.py  (+1 more)
tests/: conftest.py  test_api.py  test_cli.py  test_client.py  test_config.py  test_converter_base.py  test_converter_cache.py  test_converter_docling.py  test_converter_docling_edge_cases.py  test_converter_docling_integration.py  test_converter_markitdown.py  test_formatting.py  test_paths.py  test_semantic.py
