[project]
name = "riszotto"
version = "0.1.0"
description = "CLI tool for searching and reading papers from a local Zotero library"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "pyzotero>=1.5.0",
    "markitdown>=0.1.0",
]

[project.scripts]
riszotto = "riszotto.cli:app"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
