[project]
name = "riszotto"
dynamic = ["version"]
description = "CLI tool for searching and reading papers from a local Zotero library"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "pyzotero>=1.5.0",
    "markitdown[pdf]>=0.1.0",
]

[project.scripts]
riszotto = "riszotto.cli:app"

[project.urls]
Repository = "https://github.com/PythonFZ/riszotto"

[project.optional-dependencies]
semantic = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "tqdm>=4.0.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/riszotto/_version.py"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "httpx>=0.24.0",
    "fastapi>=0.100.0",
]
